
if WITH_LIBZIP

if WITH_ODS_FILTER

liborcusdir = $(includedir)/liborcus-@ORCUS_API_VERSION@/orcus/odf

liborcus_HEADERS = \
	odf_token_constants.hpp \
	odf_token_constants.inl \
	odf_tokens.hpp \
	ods_context.hpp \
	ods_handler.hpp \
	para_context.hpp

endif # WITH_ODS_FILTER

endif # WITH_LIBZIP
