
liborcusdir = $(includedir)/liborcus-@ORCUS_API_VERSION@/orcus/spreadsheet
liborcus_HEADERS = \
	types.hpp \
	export_interface.hpp \
	import_interface.hpp

if BUILD_SPREADSHEET_MODEL

liborcus_HEADERS += \
	document.hpp \
	factory.hpp \
	global_settings.hpp \
	shared_strings.hpp \
	sheet.hpp \
	sheet_properties.hpp \
	styles.hpp

endif
